# detic_onnx_ros2

./: README.md  package.xml  setup.cfg
detic_onnx_ros2/: .gitmodules  detic_onnx_ros2.py  package.xml  setup.py
detic_onnx_ros2/detic_onnx_ros2/: detic_onnx_ros2.py
detic_onnx_ros2/launch/: detic_onnx_ros2.launch.xml
detic_onnx_ros2_msg/: CMakeLists.txt  README.md  package.xml
detic_onnx_ros2_msg/msg/: BoundingBox.msg  Polygon.msg  Segmentation.msg  SegmentationInfo.msg
