<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detic_onnx_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nagaoaustineo@gmail.com">ubuntu</maintainer>
  <license>Apache 2.0</license>

  <depend>python3-onnxruntime-gpu-pip</depend>
  <depend>python3-pil</depend>
  <depend>python3-requests</depend>
  <depend>launah_xml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
